<resources>
    <string name="app_name">LoginPage</string>
    <string name="remember_me_text">Remember me</string>
    <string name="kapaw_text">KaPaw</string>
    <string name="welcome_text">WELCOME</string>
    <string name="login_your_information_text">Login your information</string>
    <string name="email_address_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="choose_to_login_with_text">Choose to Login with</string>
    <string name="login_text">Login</string>
    <string name="paw_text">KaPaw</string>
</resources>