<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:alpha="0.8"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/image_view"
        android:gravity="center"
        android:padding="28dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_pets_24"
            android:importantForAccessibility="no" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kapaw_text"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="@color/black"/>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_view">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:src="@drawable/pets"
            android:importantForAccessibility="no" />

    </RelativeLayout>

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    app:cardCornerRadius="28dp"
    android:layout_marginBottom="-20dp"
    android:id="@+id/card_view"
    android:alpha="0.7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:id="@+id/Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textColor="@color/primary"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/LoginInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:text="@string/login_your_information_text"
            android:textColor="#795548"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address_text"
            android:alpha="0.8"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_done_24"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck"
            android:importantForAutofill="no" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>
        <TextView
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_text"
            android:alpha="0.8"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck"
            android:importantForAutofill="no" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:alpha="0.8"
                android:text="@string/remember_me_text"
                android:textColor="#795548"
                tools:ignore="RelativeOverlap,TextContrastCheck" />

            <TextView
                android:id="@+id/ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_text"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/LoginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login_text"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <TextView
            android:id="@+id/Choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:alpha="0.8"
            android:text="@string/choose_to_login_with_text"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@id/image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/fb"
                android:importantForAccessibility="no" />

            <ImageView
                android:id="@id/image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/google"
                android:importantForAccessibility="no"
                tools:ignore="ImageContrastCheck,ImageContrastCheck" />

            <ImageView
                android:id="@id/image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/tweet"
                android:importantForAccessibility="no"
                tools:ignore="ImageContrastCheck" />
            <ImageView
                android:id="@id/image_view"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/insta"
                android:importantForAccessibility="no" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>

</RelativeLayout>